// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button test suite should render a primary button as default 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  padding: 16px 30px;
  border-radius: 10px;
  -webkit-transition: background-color .2s ease-out;
  transition: background-color .2s ease-out;
  background-color: #0084ff;
  color: #fff;
}

.c0:hover {
  background-color: #a7c3dc;
}

.c0:hover {
  cursor: pointer;
}

.c0:active,
.c0:focus {
  outline: none;
}

<button
    class="c0"
  >
    default button
  </button>
</DocumentFragment>
`;

exports[`Button test suite should render a primary button as default 2`] = `
<DocumentFragment>
  .c0 {
  border: none;
  padding: 16px 30px;
  border-radius: 10px;
  -webkit-transition: background-color .2s ease-out;
  transition: background-color .2s ease-out;
  border: 1px solid #709fb0;
  color: #709fb0;
  background-color: #fff;
}

.c0:hover {
  color: #fff;
  background-color: #84bcd0;
  border: 1px solid #84bcd0;
}

.c0:hover {
  cursor: pointer;
}

.c0:active,
.c0:focus {
  outline: none;
}

<button
    class="c0"
    kind="secondary"
  >
    secondary Button
  </button>
</DocumentFragment>
`;
